# wsjcpp-email-validation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  wsjcpp.yml
src/: main.cpp  wsjcpp_email_validation.cpp  wsjcpp_email_validation.h
src.wsjcpp/: CMakeLists.txt
src.wsjcpp/wsjcpp_core/: wsjcpp_core.h
unit-tests.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/src/: unit_test_validator_email.cpp  unit_test_validator_email.h
